# wavpy

./: README.md  pyproject.toml  setup.py  wavpy.py
doc_src/: conf.py  index.rst  mkdoc.sh
doc_src/_build/doctrees/: environment.pickle  index.doctree  intro.doctree
doc_src/_build/html/: .buildinfo  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc_src/_build/html/_modules/: index.html  wavpy.html
doc_src/_build/html/_sources/: intro.rst.txt
doc_src/_build/latex/: wavpy.aux  wavpy.fdb_latexmk  wavpy.fls  wavpy.idx  wavpy.ilg  wavpy.ind  wavpy.out  wavpy.tex  wavpy.toc
prep-release/: make_deb.py  release.py
prep-release/debian/: changelog  control  rules
test_wavs/: sox_convert_to_rifx.sh
tests/: tests.py
